style.css: fix of too much transparency for inactive nodes/edges.
Moved opacity from 0.125 to 0.25

--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@ text {
 .node.inactive .attributes-label,
 .node.inactive .objects-label
 {
-	opacity: 0.125;
+	opacity: 0.25;
 }
 
 .node.inactive .node-bg {
